--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             Abdul Rahman Hussain Siddique
         </center>
     </h1>
-   
+   <center>
         <h3 class="aim">Software Developer</h3>
+    </center>
     <hr>
     <h2>Objective Statement</h2>
     <p>Seeking an internship in software development 
@@ -48,9 +49,9 @@
     <hr>
     <h2>Projects</h2>
     <dl>
-        <dt><a style="color: whitesmoke; text-decoration: none;" 
+        <dt><a style="color: black; text-decoration: none;" 
             onMouseOver="this.style.color='#0F0'"
-            onMouseOut="this.style.color='#fff'"
+            onMouseOut="this.style.color='#000'"
             href="https://campusclubhouse.web.app/" >
             <li style="list-style-image: url(./images/CC.ico); font-size: large;">
                 <strong>CampusClubhouse</strong>
@@ -66,9 +67,9 @@
         <li>Football, Cricket</li>
     </ul>
     <hr>
-    <a  style="color: whitesmoke; text-decoration: none;" 
+    <a  style="color: black; text-decoration: none;" 
         onMouseOver="this.style.color='#0F0'"
-        onMouseOut="this.style.color='#FFF'"
+        onMouseOut="this.style.color='#000'"
         href="./images/5.gif">
         <h2>Certifications</h2>
     </a>
