--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
             Abdul Rahman Hussain Siddique
         </center>
     </h1>
-   <center>
+   
         <h3 class="aim">Software Developer</h3>
-    </center>
     <hr>
     <h2>Objective Statement</h2>
-    <p>Seeking an opportunity in software development 
+    <p>Seeking an internship in software development 
         where I can leverage my strong foundation in
         programming languages, problem-solving skills,
         and passion for creating innovative software
         solutions. Committed to expanding my knowledge
         of software development methodologies and
         technologies while collaborating with a dynamic
-        team. As a fresher, I aspire to contribute to
+        team. As an intern, I aspire to contribute to
         impactful projects, gain practical experience,
         and develop the necessary skills for a successful
         career in software development.</p>
@@ -49,9 +48,9 @@
     <hr>
     <h2>Projects</h2>
     <dl>
-        <dt><a style="color: black; text-decoration: none;" 
+        <dt><a style="color: gray; text-decoration: none;" 
             onMouseOver="this.style.color='#0F0'"
-            onMouseOut="this.style.color='#000'"
+            onMouseOut="this.style.color='gray'"
             href="https://campusclubhouse.web.app/" >
             <li style="list-style-image: url(./images/CC.ico); font-size: large;">
                 <strong>CampusClubhouse</strong>
@@ -67,9 +66,9 @@
         <li>Football, Cricket</li>
     </ul>
     <hr>
-    <a  style="color: black; text-decoration: none;" 
+    <a  style="color: grey; text-decoration: none;" 
         onMouseOver="this.style.color='#0F0'"
-        onMouseOut="this.style.color='#000'"
+        onMouseOut="this.style.color='gray'"
         href="./images/5.gif">
         <h2>Certifications</h2>
     </a>
