--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <h3 class="aim">Software Developer</h3>
     <hr>
     <h2>Objective Statement</h2>
-    <p>Seeking an internship in software development 
+    <p>Seeking an opportunity in software development 
         where I can leverage my strong foundation in
         programming languages, problem-solving skills,
         and passion for creating innovative software
         solutions. Committed to expanding my knowledge
         of software development methodologies and
         technologies while collaborating with a dynamic
-        team. As an intern, I aspire to contribute to
+        team. As a fresher, I aspire to contribute to
         impactful projects, gain practical experience,
         and develop the necessary skills for a successful
         career in software development.</p>
