--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     <ul>
         <li>Extensive knowledge in programming languages [Python, Javascript, C++],</li>
         <li>Frontend Development [HTML, CSS],</li>
-        <li>Library [React, npm].</li>
-        <li>Familiar with version control systems like git</li>
+        <li>Frameworks [Bootstrap],</li>
+        <li>Library [React, npm],</li>
+        <li>Familiar with version control systems like git,</li>
         <li>Familiarity with Azure cloud computing</li>
     </ul>
     <hr>
