add progress bar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <hr>
     <h2>Skills</h2>
     <ul>
-        <li>Extensive knowledge in programming languages [Python, Javascript, C++],</li>
+        <li>Extensive knowledge in programming languages [Python, Javascript, C++],</li><progress value="50" max="100"><progress>
         <li>Frontend Development [HTML, CSS],</li>
         <li>Frameworks [Bootstrap],</li>
         <li>Library [React, npm],</li>
