navbar / scrollspy underworks

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h2>Education</h2>
       <p>
         <strong
-          >Bachelor's in Engineering [BE] in Information Technology</strong
+          >Bachelor's in Engineering [IT]</strong
         >
         - 2020-2024<br />
         <small>Osmania university • Hyderabad,TS</small>
@@ -113,18 +113,20 @@
       </div>
     </section>
     <hr />
-    <nav id="navbar">
+    <div id="navbar">
+      <div class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#hobbies">Hobbies</a></li>
-        <li><a href="#certificates">Certificates</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-    </nav>
+    </div>
 
     <footer>
       <section id="contact" class="wrapper">
