--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
     <section id="education" class="qualifications divisions">
       <h2>Education</h2>
       <p>
-        <strong
-          >Bachelor's in Engineering [IT]</strong
-        >
+        <strong>Bachelor's in Engineering [IT]</strong>
         - 2020-2024<br />
         <small>Osmania university • Hyderabad,TS</small>
       </p>
@@ -122,8 +120,11 @@
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#hobbies">Hobbies</a></li>
+        <li><a href="#certificates">Certificates</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
