--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     ></script>
   </head>
   <body>
+    <div class="scrollspy-toggle">
+      <span id="scrollspy-toggle-btn">&raquo;</span>
+    </div>
+    <div class="scrollspy">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#hobbies">Hobbies</a></li>
+        <li><a href="#certificates">Certificates</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
     <section id="home">
       <section class="header">
         <div class="progress-container">
